--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,10 +5,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #330000;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 800 400'%3E%3Cdefs%3E%3CradialGradient id='a' cx='396' cy='281' r='514' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23D18'/%3E%3Cstop offset='1' stop-color='%23330000'/%3E%3C/radialGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='400' y1='148' x2='400' y2='333'%3E%3Cstop offset='0' stop-color='%23FA3' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23FA3' stop-opacity='0.5'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='800' height='400'/%3E%3Cg fill-opacity='0.4'%3E%3Ccircle fill='url(%23b)' cx='267.5' cy='61' r='300'/%3E%3Ccircle fill='url(%23b)' cx='532.5' cy='61' r='300'/%3E%3Ccircle fill='url(%23b)' cx='400' cy='30' r='300'/%3E%3C/g%3E%3C/svg%3E");
-  background-attachment: fixed;
-  background-size: cover;
   margin-bottom: 20px;
 }
 
@@ -17,24 +13,15 @@ code {
     monospace;
 }
 
-/* @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
-
-:root {
-  --quickSand: 'Quicksand', sans-serif;
-} */
 
 *{
-  /* margin: 0; */
-  /* font-family: var(--quickSand); */
   color: #333;
   box-sizing: border-box;
 }
 
 .appBar {
-  border-radius: 15px;
-  margin: 30px 0;
+  margin: 5px auto;
   display: flex;
-  flex-direction: row !important;
   justify-content: center;
   align-items: center;
 }
@@ -47,9 +34,6 @@ code {
   margin-left: 15px;
 }
 
-.paper {
-  padding: 10px !important;
-}
 
 .form {
   display: flex;
@@ -58,8 +42,8 @@ code {
   margin: 5px;
 }
 .fileInput {
-  width: 97%;
-  margin: 10px 0;
+  width: 97% !important;
+  margin: 10px 0 !important;
 }
 
 .buttonSubmit {
@@ -72,4 +56,36 @@ code {
 
 .deleteLeft{
   margin-left: auto !important;
+}
+
+div.form-img-wrapper {
+  display: block;
+}
+.form-wrapper {
+  max-width: 700px;
+  width: 80%;
+  margin: 10px auto;
+}
+/* .boy_image {
+  margin-top: 10px;
+  width: 100%;
+  margin-left: 5%;
+  margin-right: 5%;
+} */
+.img_wrapper {
+  flex: 50% !important;
+}
+
+@media screen and (max-width: 412px){
+  /* .boy_image {
+    width: 90%;
+    height: auto;
+    margin-left: 5%;
+  } */
+  .form-img-wrapper {
+    display: block;
+  }
+  .form-wrapper {
+    width: 90%;
+  }
 }
